fix the responsivness issue on small device of header

--- a/front-end/src/pages/Profile/Profile.module.css
+++ b/front-end/src/pages/Profile/Profile.module.css
@@ -21,6 +21,7 @@
 .profileHead {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 .profileHead p {
   font-size: 28px;
@@ -211,6 +212,9 @@
 }
 
 @media (max-width: 999.98px) {
+  .profileActionBtns {
+    flex-direction: column-reverse;
+  }
   .profileContent {
     width: 100%;
     max-width: 750px;
